# dbtogp

./: .gitignore  README.md  SETUP.md  authcheck.py  clients.py  dbtogp.py  helpers.py  ledger.py  mover.py  pyproject.toml  reconcile.py  requirements.txt
docs/superpowers/plans/: 2026-05-28-dropbox-to-google-photos.md
docs/superpowers/specs/: 2026-05-28-dropbox-to-google-photos-design.md
tests/: test_clients.py  test_dbtogp.py  test_helpers.py  test_ledger.py  test_mover.py  test_reconcile.py
