[project]
name = "dbtogp"
version = "0.1.0"
description = "Move a Dropbox folder into a Google Photos album"
requires-python = ">=3.9"
dependencies = [
    "dropbox>=12,<13",
    "google-auth-oauthlib>=1.2,<2",
    "requests>=2.31",
]

[project.scripts]
dbtogp = "dbtogp:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Flat top-level modules (no package dir) — list them so the entry point resolves.
py-modules = ["dbtogp", "clients", "helpers", "ledger", "mover", "reconcile"]

[tool.uv]
package = true
